bin/test/Fall_21_Test_Cases/Good/LO-1/lvl1-good-difficult-ij.lo
//good case : multiple if blocks

String a, b, c;
{
a = "Hello World";
if((a = "Hello World")){
b = "Goodbye";
}
else{
	;
}
if((b = "Goodbye")){
c = "How are you";
}
else{
	;
}
}
