bin/test/Fall_21_Test_Cases/Bad/LO-1/lvl1-bad-medium-ij.lo
//bad case : missing parantheses for expression
int a;
{
a = 2;
if(a < 5){

}
}
